Added All Section with responsive

--- a/Home/index.html
+++ b/Home/index.html
@@ -14,7 +14,7 @@
     <section class="top-bar">
         <div class="half-width-1">
             <h2>Hello I'm</h2>
-            <h1><span class="name-highlight">Jack Smith</span></h1>
+            <h1><span class="name-highlight">Md Saniul Basir Saz</span></h1>
             <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work.</p>
             <a target="_blank" class="Link-Btn" href="www.facebook.com/saniulsaz36">Hire Me</a>
         </div>
@@ -53,6 +53,22 @@
             </div>
         </div>
     </div>
+    </section>
+
+    <section class="footer">
+        <div class="footer-text">
+            <h2>What Client are say</h2>
+            <h4>Bruce Morchi</h4>
+            <h5>Founder & CEO Alies</h5>
+            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni obcaecati porro veniam iusto velit dolore iure. Fugit, enim animi? Maiores!"</p>
+        </div>
+        <div class="footer-box">
+            <p>Leave me a message in the</p>
+            <h2>saniul.cse.just@gmail.com</h2>
+        </div>
+        <div class="footer-bootom-text">
+            <p>Md Saniul Basir Saz @2024 All rights Reserved</p>
+        </div>
     </section>
 </body>
 </html>
