--- a/Home/index.html
+++ b/Home/index.html
@@ -19,7 +19,7 @@
             <a target="_blank" class="Link-Btn" href="www.facebook.com/saniulsaz36">Hire Me</a>
         </div>
         <div class="half-width-2">
-            <img src="https://github.com/mdsaniulbasirsaz/repository/blob/main/images/peter.png?raw=true" alt="">
+            <img src="/images/peter.png" alt="">
         </div>
     </section>
 
